@@ -96,6 +96,7 @@ objects for a quick display of its type and members.
 Events that come from the system will have a guaranteed set of
 member items based on the type. Here is a list of the Event members
 that are defined with each type.<br><table align=center>
+<tr><td><b>QUIT</b></td><td><i>none</i></td></tr>
 <tr><td><b>ACTIVEEVENT</b></td><td>gain, state</td></tr>
 <tr><td><b>KEYDOWN</b></td><td>unicode, key, mod</td></tr>
 <tr><td><b>KEYUP</b></td><td>key, mod</td></tr>
@@ -108,6 +109,7 @@ that are defined with each type.<br><table align=center>
 <tr><td><b>JOYBUTTONUP</b></td><td>joy, button</td></tr>
 <tr><td><b>JOYBUTTONDOWN</b></td><td>joy, button</td></tr>
 <tr><td><b>VIDEORESIZE</b></td><td>size</td></tr>
+<tr><td><b>VIDEOEXPOSE</b></td><td><i>none</i></td></tr>
 <tr><td><b>USEREVENT</b></td><td>code</td></tr></table>
 
 <hr>
